force-app/main/default/objects/LoanApplicant/LoanApplicant.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>