force-app/main/default/objects/LoanApplicant/fields/DomainId__c.field-meta.xml
<CustomField>
    <fullName>DomainId__c</fullName>
    <externalId>true</externalId>
    <label>DomainId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>