force-app/main/default/objects/LoanApplicant/fields/IDNumber__c.field-meta.xml
<CustomField>
    <fullName>IDNumber__c</fullName>
    <description>This is used for reporting purposes.</description>
    <formula>Contact.Account.Identification_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Number</label>
    <type>Text</type>
</CustomField>