force-app/main/default/objects/LoanApplicant/fields/IDV_Status__c.field-meta.xml
<CustomField>
    <fullName>IDV_Status__c</fullName>
    <label>IDV Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>