force-app/main/default/objects/LoanApplicant/fields/MC_Template_Selection__c.field-meta.xml
<CustomField>
    <fullName>MC_Template_Selection__c</fullName>
    <label>MC Template Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MC_Email_Template_Selection</valueSetName>
    </valueSet>
</CustomField>