force-app/main/default/objects/LoanApplicant/fields/Opportunity_Owner_DigiApp_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_DigiApp_Link__c</fullName>
    <formula>SourceOpportunity__r.Owner.DigiApp_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner DigiApp Link</label>
    <type>Text</type>
</CustomField>