force-app/main/default/objects/LoanApplicant/fields/Opportunity_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Email__c</fullName>
    <formula>SourceOpportunity__r.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Email</label>
    <type>Text</type>
</CustomField>