force-app/main/default/objects/LoanApplicant/fields/Opportunity_Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_First_Name__c</fullName>
    <formula>SourceOpportunity__r.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner First Name</label>
    <type>Text</type>
</CustomField>