force-app/main/default/objects/LoanApplicant/fields/Opportunity_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_ID__c</fullName>
    <formula>SourceOpportunity__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner ID</label>
    <type>Text</type>
</CustomField>