force-app/main/default/objects/LoanApplicant/fields/Opportunity_Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Last_Name__c</fullName>
    <formula>SourceOpportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Last Name</label>
    <type>Text</type>
</CustomField>