force-app/main/default/objects/LoanApplicant/fields/Opportunity_Owner_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Mobile__c</fullName>
    <formula>SourceOpportunity__r.Owner.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Mobile</label>
    <type>Text</type>
</CustomField>