force-app/main/default/objects/LoanApplicant/fields/SourceBondOpportunity__c.field-meta.xml
<CustomField>
    <fullName>SourceBondOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Bond Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applicants (Source Bond Opportunity)</relationshipLabel>
    <relationshipName>Applicants1</relationshipName>
    <type>Lookup</type>
</CustomField>