force-app/main/default/objects/LoanApplicant/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attempting Contact</fullName>
            </value>
            <value>
                <fullName>Poor Credit</fullName>
            </value>
            <value>
                <fullName>Consent Refused</fullName>
            </value>
            <value>
                <fullName>Awaiting Consent</fullName>
                <default>true</default>
                <label>Awaiting Consent</label>
            </value>
            <value>
                <fullName>Awaiting Credit Check</fullName>
            </value>
            <value>
                <fullName>Awaiting Documents</fullName>
            </value>
            <value>
                <fullName>Awaiting Verification</fullName>
            </value>
            <value>
                <fullName>Verification Failed</fullName>
                <label>Processed Unsuccessfully</label>
            </value>
            <value>
                <fullName>Verification Successful</fullName>
                <label>Processed Successfully</label>
            </value>
            <value>
                <fullName>PA Issued</fullName>
            </value>
            <value>
                <fullName>Awaiting OTP</fullName>
            </value>
            <value>
                <fullName>OTP Received</fullName>
            </value>
            <value>
                <fullName>OTP Received - Awaiting Docs</fullName>
            </value>
            <value>
                <fullName>Ready For Verification</fullName>
            </value>
            <value>
                <fullName>Awaiting Signature</fullName>
            </value>
            <value>
                <fullName>Signed Application Uploaded</fullName>
            </value>
            <value>
                <fullName>Deal Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>