force-app/main/default/objects/LoanApplicant/fields/Template_Selection__c.field-meta.xml
<CustomField>
    <fullName>Template_Selection__c</fullName>
    <formula>TEXT(LoanApplication.Opportunity.Template_Selection__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Selection</label>
    <type>Text</type>
</CustomField>