force-app/main/default/objects/LoanApplicant/recordTypes/Bond_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Bond_Applicant</fullName>
    <active>true</active>
    <label>Bond Applicant</label>
</RecordType>