force-app/main/default/objects/LoanApplicant/recordTypes/Pre_Approval_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Pre_Approval_Applicant</fullName>
    <active>true</active>
    <label>Pre Approval Applicant</label>
</RecordType>