force-app/main/default/objects/LoanApplicant/validationRules/BlockOnConsentRequirementsNotMet.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockOnConsentRequirementsNotMet</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(Contact.Account.ConsentRequirementsMet__c = false ,idvFinalScore__c != null),AND(Contact.Account.ConsentRequirementsMet__c = false ,creditCheckScore__c != null))</errorConditionFormula>
    <errorMessage>Consent Requirements Not Met</errorMessage>
</ValidationRule>