force-app/main/default/objects/LoanApplicant/listViews/All_LoanApplicants.listView-meta.xml
<ListView>
    <fullName>All_LoanApplicants</fullName>
    <columns>Name</columns>
    <columns>LoanApplication</columns>
    <columns>BorrowerType</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Loan Applicants</label>
</ListView>